[project]
name = "browsergym-n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.9",
    "aiolimiter==1.2.0",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "attrs==24.2.0",
    "beartype==0.12.0",
    "beautifulsoup4==4.12.3",
    "blinker==1.9.0",
    "browsergym-assistantbench==0.13.3",
    "browsergym==0.13.3",
    "browsergym-core==0.13.3",
    "browsergym-experiments==0.13.3",
    "browsergym-miniwob==0.13.3",
    "browsergym-visualwebarena==0.13.3",
    "browsergym-webarena==0.13.3",
    "browsergym-workarena==0.4.1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cloudpickle==3.1.0",
    "colorama==0.4.6",
    "dataclasses-json==0.6.7",
    "datasets==3.1.0",
    "dill==0.3.8",
    "distro==1.9.0",
    "english-words==2.0.1",
    "evaluate==0.4.3",
    "faker==33.1.0",
    "farama-notifications==0.0.4",
    "filelock==3.16.1",
    "flask==3.1.0",
    "frozenlist==1.5.0",
    "fsspec==2024.9.0",
    "greenlet==3.0.3",
    "gymnasium==1.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.0",
    "huggingface-hub==0.26.3",
    "idna==3.10",
    "imageio==2.36.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jiter==0.8.0",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-core==0.3.21",
    "langgraph==0.2.54",
    "langgraph-checkpoint==2.0.8",
    "langgraph-sdk==0.1.42",
    "langsmith==0.1.147",
    "lazy-loader==0.4",
    "libvisualwebarena==0.0.15",
    "libwebarena==0.0.4",
    "lxml==5.3.0",
    "markupsafe==3.0.2",
    "marshmallow==3.23.1",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "mypy-extensions==1.0.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "openai==1.56.1",
    "orjson==3.10.12",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "playwright==1.47.0",
    "portalocker==3.0.0",
    "propcache==0.2.1",
    "pyarrow==18.1.0",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pyee==12.0.0",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "sacrebleu==2.4.3",
    "safetensors==0.4.5",
    "scikit-image==0.24.0",
    "scipy==1.14.1",
    "setuptools==75.6.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "text-generation==0.7.0",
    "tifffile==2024.9.20",
    "tiktoken==0.8.0",
    "tokenizers==0.20.3",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.46.3",
    "types-requests==2.32.0.20241016",
    "types-tqdm==4.67.0.20241119",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "weblinx==0.3.2",
    "weblinx-browsergym==0.0.1.dev14",
    "werkzeug==3.1.3",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "langchain-community>=0.3.9",
    "langchain-openai>=0.2.12",
    "notebook>=7.3.2",
]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::UserWarning:gymnasium.*:',  # too many "The obs is not within the observation space." warnings.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: mark test to be run sequantially (deselect with '-m \"not serial\"')"
]
