[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "browsergym"
description = "BrowserGym: a gym environment for web task automation in the Chromium browser"
authors = [
    {name = "Rim Assouel"},
    {name = "Léo Boisvert"},
    {name = "Massimo Caccia"},
    {name = "Alex Drouin"},
    {name = "Maxime Gasse"},
    {name = "Imene Kerboua"},
    {name = "Alex Lacoste"},
    {name = "Thibault Le Sellier De Chezelles"},
    {name = "Tom Marty"},
]
readme = "README.md"
requires-python = ">3.7"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
version="0.13.3"
dependencies = [
    "browsergym-core==0.13.3",
    "browsergym-miniwob==0.13.3",
    "browsergym-webarena==0.13.3",
    "browsergym-visualwebarena==0.13.3",
    "browsergym-assistantbench==0.13.3",
    "browsergym-experiments==0.13.3",
    "browsergym-workarena>=0.4.1",
    "weblinx-browsergym>=0.0.1dev14",
]

[tool.setuptools]
packages = []  # meta distribution, packages are included as dependencies
