[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "browsergym"
description = "BrowserGym: a gym environment for web task automation in the Chromium browser"
authors = [
    {name = "Rim Assouel"},
    {name = "Léo Boisvert"},
    {name = "Massimo Caccia"},
    {name = "Alex Drouin"},
    {name = "Maxime Gasse"},
    {name = "Imene Kerboua"},
    {name = "Alex Lacoste"},
    {name = "Thibault Le Sellier De Chezelles"},
    {name = "Tom Marty"},
    {name = "Aman Jaiswal"},
    {name = "Nicolas Gontier"},
]
readme = "README.md"
requires-python = ">3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
version="0.14.3.dev4"
dependencies = [
    "browsergym-core==0.14.3.dev4",
    "browsergym-miniwob==0.14.3.dev4",
    "browsergym-webarena==0.14.3.dev4",
    "browsergym-visualwebarena==0.14.3.dev4",
    "browsergym-assistantbench==0.14.3.dev4",
    "browsergym-experiments==0.14.3.dev4",
    "browsergym-workarena>=0.4.1",
    "weblinx-browsergym>=0.0.2",
    "browsergym-webarenalite==0.14.3.dev4",
    "browsergym-webarena-verified==0.14.3.dev4"
]

[tool.setuptools]
packages = []  # meta distribution, packages are included as dependencies
