[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "browsergym-core"
description = "BrowserGym: a gym environment for web task automation in the Chromium browser"
authors = [
    {name = "Rim Assouel"},
    {name = "Léo Boisvert"},
    {name = "Massimo Caccia"},
    {name = "Alex Drouin"},
    {name = "Maxime Gasse"},
    {name = "Alex Lacoste"},
    {name = "Tom Marty"},
]
readme = "README.md"
requires-python = ">3.9"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["dependencies", "version"]

[project.urls]
homepage = "https://github.com/ServiceNow/BrowserGym"

[tool.hatch.version]
path = "src/browsergym/core/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/browsergym"]
