[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "browsergym-experiments"
description = "Experimentation tools for BrowserGym"
authors = [
    {name = "Massimo Caccia"},
    {name = "Alex Lacoste"},
    {name = "Thibault Le Sellier De Chezelles"},
    {name = "Maxime Gasse"},
]
readme = "README.md"
requires-python = ">3.7"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
miniwob = [
  "browsergym-miniwob",
]
workarena = [
  "browsergym-workarena",
]
webarena = [
  "browsergym-webarena",
]
visualwebarena = [
  "browsergym-visualwebarena",
]
assistantbench = [
  "browsergym-assistantbench",
]
weblinx = [
  "weblinx_browsergym",
]
all = [
  "browsergym-experiment[miniwob]",
  "browsergym-experiment[workarena]",
  "browsergym-experiment[webarena]",
  "browsergym-experiment[visualwebarena]",
  "browsergym-experiment[assistantbench]",
  "browsergym-experiment[weblinx]",
]

[project.urls]
homepage = "https://github.com/ServiceNow/BrowserGym"

[tool.hatch.version]
path = "../core/src/browsergym/core/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/browsergym", "src/bgym"]
